libs/parser/testdata/errors/at_whitespace.csl
# Test rejection of whitespace in @ reference
case1: @ configs:db.host
case2: @configs :db.host
case3: @configs: db.host
